# nanobanana-editor

./: .env.example  README.md  app_config.toml  pyproject.toml  requirements.txt
.github/workflows/: hf_sync.yml  sync_private_2_public.yml
public/: .gitignore  app.py  generate_image.py
public/.github/workflows/: sync_gh2hf.yml
public/src/core/: prompt_templates.py  tab_specs.py
public/src/core/generators/: __init__.py  imagen.py  test.py
public/src/ui/: gradio_app_old.py.backup
public/src/ui/tabs/: base_tab.py  gemini_tab.py  reference_tab.py  settings_tab.py
public/tests/: test_gradio_image_handling.py
samples/: README.md
samples/gcp_samples/: gradio_demo.py  vertexai_adc_login.py
samples/gemini_api_sample/: gemini_multi_turn.py  gemini_token_count.py  imagen4_simple_sample.py  nanobanana_edit_alpha_multi_turn.py  nanobanana_edit_alpha_sample.py  nanobanana_google_search.py  nanobanana_simple_sample.py  nanobanana_simple_sample_alpha.py
samples/open_router_sample/: nanobanana_openrouter_simple_sample.py  openrouter_gemini-3-pro-image.md
samples/rembg/: rembg_sample.py
samples/vertex_ai_api_samples/: imagen4_simple_sample_byADC.py
src/cli/: README.md  image_gen_cli.py
src/core/: model_specs.py  output_manager.py  prompt_optimizer.py  tab_specs.py
src/core/generators/: base.py  config.py  gemini.py
src/ui/: gradio_app.py
src/ui/tabs/: __init__.py  advanced_edit_tab.py  agent_tab.py  analysis_tab.py  basic_edit_tab.py  gemini_tab.py  imagen_tab.py  layout_edit_tab.py  multiturn_edit_tab.py  outfit_change_tab.py  reference_tab.py
